--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -1,10 +1,16 @@
 label_setting(name="compiler",
+              # build_setting_default = "//bin:ocamlcc",
               build_setting_default = "//boot:ocamlc.boot",
               visibility = ["//visibility:public"])
 
 label_setting(name="lexer",
+              # build_setting_default = "//bin:ocamllex",
               build_setting_default = "//boot:ocamllex.boot",
               visibility = ["//visibility:public"])
+
+# label_setting(name="runtime",
+#               build_setting_default = "//runtime:asmrun",
+#               visibility = ["//visibility:public"])
 
 label_setting(name="stdlib",
               build_setting_default = "//stdlib",
