--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -1,8 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//bzl:rules.bzl", "boot_compiler")
+load("//bzl:rules.bzl", "ocaml_compiler")
 
-boot_compiler(
+ocaml_compiler(
     name = "ocamlcc",
     opts = [
         # "-verbose",
@@ -18,6 +18,9 @@ boot_compiler(
         # "-ccopt", "-Wl,-z,relro,-z,now",
         # "-ccopt", "-pass-exit-codes",
         # "-ccopt", "-lstdc++",
+
+        # "-ccopt", "-Wl,-export_dynamic",
+        # "-ccopt", "-Wl,-all_load"
     ] + select({
         "//platform/target/os:linux?": [
             "-cclib", "-lm",
@@ -41,18 +44,28 @@ boot_compiler(
             ##FIXME: depends on linker used (bfd, gold, etc.)
         ]
     }),
-    prologue = ["//compilerlibs:ocamlcommon"] + select({
-        "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
-        "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
-        "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
+    prologue = ["//compilerlibs:ocamlcommon",
+                ] + select({
+        # "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
+        # "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
+        # "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
+
+        "//config/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
+
+        # "//toolchain/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
         "//conditions:default": ["//bytecomp:ocamlbytecomp"]
     }),
     main = select({
-        "//config/target:baseline_vm?": "//driver:Main",
-        "//config/target:baseline_sys?": "//driver:Optmain",
-        "//config/target:ult_sys?": "//driver:Optmain",
+        # "//config/target:baseline_vm?": "//driver:Main",
+        # "//config/target:baseline_sys?": "//driver:Optmain",
+        # "//config/target:ult_sys?": "//driver:Optmain",
+
+        "//config/target/emitter:sys_emitter?": "//driver:Optmain",
+        # "//toolchain/target/emitter:sys_emitter?": "//driver:Optmain",
+
         "//conditions:default": "//driver:Main"
     }),
+    cc_deps = ["//runtime:asmrun"],
     visibility             = ["//visibility:public"]
 )
 
