--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -405,6 +405,7 @@ compiler_signature(
     deps   = [
         "//stdlib:Stdlib.Lazy_cmi",
         "//stdlib:Stdlib.Lexing_cmi",
+        "//stdlib:Stdlib.Obj_cmi",
     ]
 )
 
@@ -637,10 +638,10 @@ compiler_signature(
     src  = "parsetree.mli",
     opts = SIG_OPTS,
     deps   = [
-        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Format_cmi",
         ":Asttypes_cmi",
-        ":Location",
-        ":Longident",
+        ":Location_cmi",
+        ":Longident_cmi",
     ],
     visibility = [
         "//driver:__pkg__",
