--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -34,10 +34,10 @@ platform(name = "default", parents = ["@local_config_platform//:host"])
 
 ################################################################
 config_setting(name = "linux_amd64?",
-               constraint_values = ["@platforms//cpu:amd64",
+               constraint_values = ["@platforms//cpu:x86_64",
                                     "@platforms//os:linux"])
 config_setting(name = "macos_amd64?",
-               constraint_values = ["@platforms//cpu:amd64",
+               constraint_values = ["@platforms//cpu:x86_64",
                                     "@platforms//os:macos"])
 
 alias(name = "linux_x86_64?", actual = ":linux_amd64")
