--- a/platform/xtarget/cpu/BUILD.bazel
+++ b/platform/xtarget/cpu/BUILD.bazel
@@ -1,9 +1,23 @@
 package(default_visibility = ["//visibility:public"])
 
-alias(name = "amd65?", actual = "//platform/cpu:amd64?")
-alias(name = "arm?",   actual = "//platform/cpu:arm?")
-alias(name = "arm64?", actual = "//platform/cpu:arm64?")
-alias(name = "i386?",  actual = "//platform/cpu:i386?")
-alias(name = "power?", actual = "//platform/cpu:power?")
-alias(name = "riscv?", actual = "//platform/cpu:riscv?")
-alias(name = "s390x?", actual = "//platform/cpu:s390x?")
+
+config_setting(name="amd64?",
+               constraint_values = ["@platforms//cpu:x86_64"])
+
+config_setting(name="arm?",
+               constraint_values = ["@platforms//cpu:arm"])
+
+config_setting(name="arm64?",
+               constraint_values = ["@platforms//cpu:arm64"])
+
+config_setting(name="i386?",
+               constraint_values = ["@platforms//cpu:i386"])
+
+config_setting(name="power?",
+               constraint_values = ["@platforms//cpu:ppc"])
+
+config_setting(name="riscv?",
+               constraint_values = ["@platforms//cpu:riscv64"])
+
+config_setting(name="s390x?",
+               constraint_values = ["@platforms//cpu:s390x"])
