--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -1,3 +1,19 @@
+load("//bzl:rules.bzl",
+     "boot_archive",
+     "boot_config",
+     # "boot_executable",
+     "boot_library",
+     "build_tool",
+     "compiler_module",
+     "compiler_signature",
+)
+
+load("//config:CONFIG.bzl", "CPP", "w")
+
+load("//vendor/mustach:BUILD_RULES.bzl", "mustache")
+
+load(":BUILD.bzl", "write_config")
+
 ## make log:
 
 # ./boot/ocamlrun ./boot/ocamlc  (twice!)
@@ -10,20 +26,6 @@
 
 # ./boot/ocamlrun ./boot/ocamlc
 # -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
-
-load("//bzl:rules.bzl",
-     "boot_archive",
-     "boot_config",
-     "boot_executable",
-     "boot_library",
-     "compiler_module",
-     "compiler_signature",
-     "mustache"
-)
-
-load("//config:CONFIG.bzl", "CPP", "w")
-
-load(":BUILD.bzl", "write_config")
 
 exports_files([ ## for //otherlibs/dynlink:Dynlink_compilerlibs
     "arg_helper.mli", "arg_helper.ml",
@@ -63,7 +65,8 @@ SIG_OPTS    = []
 # $(expunge): compilerlibs/ocamlcommon.cma compilerlibs/ocamlbytecomp.cma \
 #          toplevel/expunge.cmo
 # 	$(CAMLC) $(LINKFLAGS) -o $@ $^
-boot_executable(
+# boot_executable(
+build_tool( ## only build as vm/vm with boot compiler
     name = "expunge",
     prologue = [
         "//compilerlibs:ocamlcommon",
@@ -167,9 +170,10 @@ compiler_module(
 compiler_signature(
     name = "Arg_helper_cmi",
     src  = "arg_helper.mli",
-    opts = SIG_OPTS,
+    opts = SIG_OPTS + ["-nopervasives", "-open", "Stdlib"],
     deps   = [
-        "//stdlib:Stdlib.Map_cmi",
+        "//stdlib:Stdlib",
+        "//stdlib:Stdlib.Map_cmi"
     ]
 )
 
@@ -209,10 +213,10 @@ compiler_module(
 compiler_signature(
     name = "Binutils_cmi",
     src  = "binutils.mli",
-    opts = SIG_OPTS,
+    opts = SIG_OPTS + ["-nopervasives", "-open", "Stdlib"],
     deps   = [
-        "//stdlib:Stdlib.Result_cmi",
-    ]
+        "//stdlib:Stdlib_cmi",
+        "//stdlib:Stdlib.Result_cmi"]
 )
 
 compiler_module(
@@ -537,7 +541,7 @@ compiler_signature(
 
 compiler_module(
     name   = "Domainstate",
-    struct = "domainstate.ml",
+    struct = "domainstate_ml",
     sig    = "Domainstate_cmi",
     opts = MODULE_OPTS,
     deps   = [
@@ -576,7 +580,7 @@ mustache(
 
 compiler_signature(
     name = "Domainstate_cmi",
-    src  = "domainstate.mli",
+    src  = "domainstate_mli",
     opts = SIG_OPTS,
     deps   = ["//stdlib:Stdlib_cmi"]
 )
@@ -1035,6 +1039,7 @@ compiler_signature(
     deps   = [
         "//stdlib:Stdlib.Lexing_cmi",
         "//stdlib:Stdlib.Lazy_cmi",
+        "//stdlib:Stdlib.Sys_cmi",
     ],
     visibility = [
         "//otherlibs/dynlink:__pkg__",
